<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dekhai</string>
    <string name="fb">https://www.facebook.com/groups/1166929073679754</string>
    <string name="youtube">https://www.youtube.com/channel/UC7sS1rBaAMypmr6nBCixIAQ?view_as=subscriber</string>
    <string name="email">shulovshopbd@gmail.com</string>

    <string name="fb_insterstial_ads">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>


    <string name="fb_banner_ads">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="support_group">Support Group</string>
    <string name="payment_history">Payment History</string>
    <string name="wallet">Wallet</string>
    <string name="membership">Membership</string>
    <string name="youtube1">YouTube</string>
    <string name="show_ads">Show Ads</string>
    <string name="click_below">এড্স দেখতে নিচের বাটন এ ক্লিক করুন</string>
    <string name="task_page">Task Page :</string>
    <string name="date">Date :</string>
    <string name="balance">Balance :</string>
    <string name="tk">tk</string>
    <string name="submit">Submit</string>
    <string name="dex">DEX-</string>
    <string name="dekhai_id">Dekhai id</string>
    <string name="amount">Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="transaction_id">Transaction id</string>
    <string name="enter_transaction_id">Enter transaction id</string>
    <string name="number">Number</string>
    <string name="enter_your_bkash_nogod_number">Enter your Bkash/Nogod number</string>
    <string name="nogod">Nogod</string>
    <string name="bkash">Bkash</string>
    <string name="ordrt_list">Ordrt List</string>
    <string name="earn_cash">Earn Cash</string>
    <string name="web_graphic_desinging_pro"><![CDATA[WEB & GRAPHIC DESINGING PRO]]></string>
    <string name="all_jobs_question_solution_bank"><![CDATA[ALL JOBS QUESTION & SOLUTION BANK]]></string>
    <string name="presentation_public_speaking"><![CDATA[PRESENTATION & PUBLIC SPEAKING]]></string>
    <string name="communication_negotiation"><![CDATA[COMMUNICATION & NEGOTIATION]]></string>
    <string name="the_biggest_online_platform_for_learning_raening_shopping"><![CDATA[The Biggest Online Platform For Learning, Raening & Shopping]]></string>
    <string name="health_beauty"><![CDATA[HEALTH & BEAUTY]]></string>
    <string name="daily_bazar">DAILY BAZAR</string>
    <string name="home_appliances">HOME APPLIANCES</string>
    <string name="smart_phone">SMART PHONE</string>
    <string name="todays_special">TODAYS SPECIAL</string>



    <string name="sendmoney">আমাদের বিকাশ নম্বরটি</string>
    <string name="bikash">01755111413(personal)</string>
    <string name="sendtext">নম্বরটিতে আপনার অর্থ প্রেরণ করুন</string>
    <string name="details">টাকা পাঠানোর পরে নীচের লিখিত নিয়মগুলি অনুসরণ করুন:</string>
    <string name="order">আপনার বিকাশ নম্বরটি লিখুন যা থেকে আপনি আমাদের টাকা পাঠিয়েছেন :</string>
    <string name="finalorder">যদি প্রতিটি জিনিস ঠিক থাকে তবে অর্ডার বোতামটি টিপুন</string>
    <string name="finalword">আমরা আপনাকে এসএমএসের মাধ্যমে সমস্ত বিবরণ পাঠাব</string>
    <string name="call">যদি আপনি কিছু জানতে চান এই নম্বরে কল করুন</string>
    <string name="address">আপনার ঠিকানা লিখুন:</string>
    <string name="roket">আমাদের রকেট নম্বরটি</string>
    <string name="contactnumber">আপনার ব্যক্তিগত ফোন নম্বরটি লিখুন</string>
    <string name="ad_attribution">Ad</string>

    <string name="tkk" tools:ignore="DuplicateDefinition">অর্ডার সাব্মিট করার ১৫ মিনিটস এর ভিতর এই নম্বরটিতে আপনার অর্থ প্রেরণ করুন</string>

    <string name="pattran">-------------------</string>
</resources>