<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.ShoppingPage"
    android:background="@color/materialBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:background="@color/materialBackground">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/materialBackground">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:background="@color/materialBackground">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/banner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:background="@drawable/new_background2"
                    android:paddingBottom="10dp">

                    <com.smarteist.autoimageslider.SliderView
                        android:id="@+id/shopping_image_slider"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        app:sliderAnimationDuration="600"
                        app:sliderAutoCycleDirection="back_and_forth"
                        app:sliderAutoCycleEnabled="true"
                        app:sliderIndicatorAnimationDuration="600"
                        app:sliderIndicatorGravity="center_horizontal|bottom"
                        app:sliderIndicatorMargin="15dp"
                        app:sliderIndicatorOrientation="horizontal"
                        app:sliderIndicatorPadding="3dp"
                        app:sliderIndicatorRadius="2dp"
                        app:sliderIndicatorSelectedColor="#5A5A5A"
                        app:sliderIndicatorUnselectedColor="#FFF"
                        app:sliderScrollTimeInSec="2"
                        app:sliderStartAutoCycle="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>



                </androidx.constraintlayout.widget.ConstraintLayout>

            </GridLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:elevation="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            android:background="@color/materialBackground">


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:paddingStart="10dp"
                android:paddingTop="12dp"
                android:paddingEnd="10dp"
                android:paddingBottom="12dp"
                android:background="@color/materialBackground">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/learning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight=".25"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">


                    <Button
                        android:id="@+id/ib_todays_special"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/dailyoffer"
                        android:backgroundTint="@color/white"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/todays_special"/>

                    <Button
                        android:id="@+id/ib_smart_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/smartphone"
                        android:backgroundTint="@color/white"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ib_todays_special"
                        android:text="@string/smart_phone"/>

                    <Button
                        android:id="@+id/ib_home_appliances"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/homeappliances"
                        android:backgroundTint="@color/white"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ib_smart_phone"
                        android:text="@string/home_appliances"/>

                    <Button
                        android:id="@+id/ib_daily_bazar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/dailybazar"
                        android:backgroundTint="@color/white"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ib_home_appliances"
                        android:text="@string/daily_bazar"/>

                    <Button
                        android:id="@+id/ib_health_beauty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableTop="@drawable/healthbeauty"
                        android:backgroundTint="@color/white"
                        android:textColor="@color/black"
                        android:padding="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ib_daily_bazar"
                        android:text="@string/health_beauty"/>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/earning"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight=".75"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp">


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/shooping_products"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="MissingConstraints" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </GridLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>